# hobocast

./: .gitattributes  .gitignore  README.md  demo-hackrf.ps1  demo-hackrf.sh  demo-loopback.ps1  demo-loopback.sh  demo-rx.ps1  demo-rx.sh  requirements.txt
boxcar/: __init__.py  channel.py  cli.py  dsp.py  fec.py  modem.py  sdr_io.py  stream.py
demos/: ber_sweep.py  fec_demo.py  hardware_loopback.py  loopback.py  profile_sweep.py  robustness_demo.py  video_loopback.py
docs/: demo.md  protocol.md  roadmap.md
native/: CMakeLists.txt  README.md  boxcar_rx.cpp  boxcar_rx.h  harness.cpp
scripts/: _config.ps1  _config.sh  build-native.ps1  build-native.sh  fdm_mux.py  fetch-commercials.ps1  fetch-commercials.sh  install-linux.sh  install-mac.sh  install-windows.ps1  render-bars.ps1  render-bars.sh  render-iq.ps1  render-iq.sh  rx-rtlsdr.ps1  rx-rtlsdr.sh  tx-cycle.ps1  tx-cycle.sh  tx-file.ps1  tx-file.sh  tx-hackrf.ps1  tx-hackrf.sh  tx-obs.ps1  tx-obs.sh
tests/: test_modem.py
tools/: plot_spectra.py  testpattern.py
